samples/_failures_safe/1761340418_ba73d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb2e85de.c: In function ‘main’:
./samples/SAFE/__tmp_eb2e85de.c:133:9: error: expected expression at end of input
  133 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_eb2e85de.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb2e85de.c:133:9: error: expected declaration or statement at end of input
